klusrc/backbone/gateways/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    gateway-certmanager: allowed
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
