klusrc/backbone/gateways/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    cert-manager.io/issuer: envoy
spec:
  addresses:
    - value: 192.168.1.14
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      # Used for cert-manager and HTTP->HTTPs redirects for all hosts
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-certmanager: allowed

    - name: thuis-joppeboeve-nl
      hostname: thuis.joppeboeve.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              name: nginx-test
      tls:
        mode: Terminate
        certificateRefs:
          - name: "cert-auth-thuis-joppeboeve-nl"
    - name: immich-joppeboeve-nl
      hostname: immich.joppeboeve.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              name: httproute-immich
      tls:
        mode: Terminate
        certificateRefs:
          - name: "cert-auth-immich-joppeboeve-nl"

    - name: lan
      hostname: 192.168.1.14
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-namespace-name: nginx-test

    - name: pihole-tcp
      port: 53
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-namespace-name: pihole

    - name: pihole-udp
      port: 53
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-namespace-name: pihole
