klusrc/backbone/gateways/envoy-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-redirect
  namespace: gateways
spec:
  parentRefs:
    - name: envoy
      sectionName: http
  rules:
    - matches:
        - path:
            value: "/"
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
